<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">食为天</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="zuire">最热菜系</string>
    <string name="zuixin">最新菜系</string>
    <string name="shiping">视屏专区</string>
    <string name="tuwen">图文专区</string>
    <string name="souye">首页</string>
    <string name="chuyi">厨艺</string>
    <string name="quanbu">全部</string>
    <string name="nanyi">难易度</string>
    <string name="renqi">人气</string>
    <string name="caiming">龙虾香蕉豇豆根</string>
    <string name="shishen">食神</string>
    <string name="back">返回</string>
    <string name="userorphone">用户名/手机</string>
    <string name="password">密码</string>
    <string name="login_login">登录</string>
    <string name="otherlogin">其他方式登录</string>
    <string name="forgotpassword">忘记密码</string>
    <string name="registernow">立即注册</string>
    <string name="phonenumb">手机号码</string>
    <string name="SMSyanz">短信验证码</string>
    <string name="getSMS">获取验证码</string>
    <string name="register">注册</string>
    <string name="agreenment">我已阅读并同意成为食为天用户使用协议</string>
    <string name="startmembers">会员开通</string>
    <string name="nowuser">当前账号:</string>
    <string name="VIPGold">VIP黄金套餐</string>
    <string name="choosegoplay">选择支付方式</string>
    <string name="pleasecode">请输入收到的验证码</string>
    <string name="next">下一步</string>
    <string name="complete">完成</string>
    <string name="newpassword">请输入新密码</string>
    <string name="thanpassword">请再次输入密码</string>
    <string name="nowpayment">立即付款</string>
    <string name="gouwuche">购物车</string>
    <string name="bianji">编辑</string>
    <string name="jiage">¥ 168</string>
    <string name="jiage_size">20sp</string>
    <string name="quanxuan">全选</string>
    <string name="fukuan">等待买家付款</string>
    <string name="chuyi_zhanshi1">    最近在看欧洲杯，小零嘴儿自然少不了，这个山药条外脆里糯，芝香浓郁，营养又饱满，做起来一点儿都不难</string>
    <string name="shanyaofirst">   将山药去皮，洗干净</string>

</resources>