<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/left_back"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/back"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:src="@drawable/login_logo" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="262dp"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="43dp"
        android:background="@drawable/login_user"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/newpassword"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/newpassword"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:maxLength="15"
            
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/promptspassword"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:textColor="@color/red" />

    <EditText
        android:id="@+id/passwordsame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:background="@drawable/login_user"
        android:hint="@string/thanpassword"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="16sp" 
        android:maxLength="15"
        />

    <TextView
        android:id="@+id/promptssame"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:textColor="@color/red" />

    <Button
        android:id="@+id/complete"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="19dp"
        android:background="@drawable/login_redzhuche"
        android:orientation="horizontal"
        android:text="@string/complete"
        android:textColor="@color/white" />

</LinearLayout>