<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page" >

    <LinearLayout
        android:id="@+id/login_otherlogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="46dp"
        android:background="@null"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/weixing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/login_weixing" />

        <ImageView
            android:id="@+id/qq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/login_qq" />

        <ImageView
            android:id="@+id/weibo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/login_weibo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_othertext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_otherlogin"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="40dp"
            android:layout_weight="1"
            android:background="@color/login_otherlogin" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/otherlogin"
            android:textColor="@color/login_otherlogin"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@color/login_otherlogin" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/login_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_othertext"
        android:layout_marginBottom="79dp" >

        <TextView
            android:id="@+id/forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="25dp"
            android:layout_toLeftOf="@+id/textview1"
            android:text="@string/forgotpassword"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textview1"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/white" />

        <TextView
            android:id="@+id/registernow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@id/textview1"
            android:text="@string/registernow"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_above="@id/login_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

      

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                android:src="@drawable/login_logo" />
        

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="43dp"
            android:background="@drawable/login_user"
            android:hint="@string/userorphone"
            android:paddingLeft="10dp"
            android:textSize="16sp" 
            android:maxLength="15"
            />

        <LinearLayout
            android:layout_width="262dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

           

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/password"
                android:paddingLeft="10dp"
                android:background="@drawable/login_user"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="16sp" 
                android:maxLength="15"
                />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/login"
            android:layout_width="262dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="19dp"
            android:orientation="horizontal" >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/login_login"
                android:background="@drawable/login_user_red"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>