<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dabeijin"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/tianchongse" >

        <TextView
            android:id="@+id/biaoti_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="芒果姐姐小厨房"
            android:textColor="@color/xuanlan"
            android:drawableLeft="@drawable/sichu"
            android:drawablePadding="5dp" />

        
        <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/fukuan"
            android:textColor="@color/bianji" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/tianchongse"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/meishi_image"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:src="@drawable/meishi" />

            <ImageButton
                android:id="@+id/bofang_anniu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:src="@drawable/bofang" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/neirong_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="美味与颜值的双重缴械,从舌尖到心底的惊艳诱惑。"
                android:textColor="@color/neirong" />

            <TextView
                android:id="@+id/jiage_textView" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/jiage"
                android:textColor="#ff4e3c"
                android:textSize="@string/jiage_size" />
        </LinearLayout>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_marginTop="1dp"
        android:background="@color/tianchongse"
        android:orientation="horizontal" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

       
        
        <RadioButton
            android:id="@+id/quxiao_dingdan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/kuangjia2"
            android:text="取消订单"
            android:textColor="@color/bianji" />

        <RadioButton
            android:id="@+id/queren_fukuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:layout_marginTop="5dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/kuangjia1"
            android:text="付款"
            android:textColor="#ffffff" />
        
    </RadioGroup>
    

</LinearLayout>